; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/keyboard/extr_ipaq-micro-keys.c_micro_key_receive.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/keyboard/extr_ipaq-micro-keys.c_micro_key_receive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipaq_micro_keys = type { i32, i32* }

@micro_keycodes = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i8*)* @micro_key_receive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @micro_key_receive(i8* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ipaq_micro_keys*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.ipaq_micro_keys*
  store %struct.ipaq_micro_keys* %11, %struct.ipaq_micro_keys** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 0
  %14 = load i8, i8* %13, align 1
  %15 = zext i8 %14 to i32
  %16 = and i32 128, %15
  store i32 %16, i32* %9, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 0
  %19 = load i8, i8* %18, align 1
  %20 = zext i8 %19 to i32
  %21 = and i32 127, %20
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* @micro_keycodes, align 4
  %24 = call i32 @ARRAY_SIZE(i32 %23)
  %25 = icmp slt i32 %22, %24
  br i1 %25, label %26, label %43

26:                                               ; preds = %3
  %27 = load %struct.ipaq_micro_keys*, %struct.ipaq_micro_keys** %7, align 8
  %28 = getelementptr inbounds %struct.ipaq_micro_keys, %struct.ipaq_micro_keys* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = load %struct.ipaq_micro_keys*, %struct.ipaq_micro_keys** %7, align 8
  %31 = getelementptr inbounds %struct.ipaq_micro_keys, %struct.ipaq_micro_keys* %30, i32 0, i32 1
  %32 = load i32*, i32** %31, align 8
  %33 = load i32, i32* %8, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i32, i32* %32, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %9, align 4
  %38 = call i32 @input_report_key(i32 %29, i32 %36, i32 %37)
  %39 = load %struct.ipaq_micro_keys*, %struct.ipaq_micro_keys** %7, align 8
  %40 = getelementptr inbounds %struct.ipaq_micro_keys, %struct.ipaq_micro_keys* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = call i32 @input_sync(i32 %41)
  br label %43

43:                                               ; preds = %26, %3
  ret void
}

declare dso_local i32 @ARRAY_SIZE(i32) #1

declare dso_local i32 @input_report_key(i32, i32, i32) #1

declare dso_local i32 @input_sync(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
